<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:layout_margin="8dp"
        android:src="@drawable/ic_cases"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/totalCaseValue"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorTotalCases"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:textColor="@color/colorHintTextLight"
            android:textAppearance="@style/TextAppearance.App.TextView.H5.White.Bold"
            android:textSize="12sp"
            android:text="@string/total_cases_title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activeCaseValue"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorTotalCases"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:textColor="@color/colorHintTextLight"
            android:textAppearance="@style/TextAppearance.App.TextView.H5.White.Bold"
            android:textSize="12sp"
            android:text="@string/active_cases_title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/todayCaseValue"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorTotalCases"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:textColor="@color/colorHintTextLight"
            android:textAppearance="@style/TextAppearance.App.TextView.H5.White.Bold"
            android:textSize="12sp"
            android:text="@string/today_cases_title"/>

    </LinearLayout>
</LinearLayout>

