<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:id="@+id/cases_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:src="@drawable/checklist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <LinearLayout
        android:id="@+id/cases_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cases_img"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/caseValue"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorHintTextLight"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/total_cases_title"
            android:textColor="@color/colorTotalCases"
            android:textSize="@dimen/text_14"
            android:textAppearance="@style/TextAppearance.App.TextView.H5.White.Bold"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <ImageView
        android:id="@+id/death_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:src="@drawable/cemetery"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/cases_description"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/death_img">

        <TextView
            android:id="@+id/deathValue"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorHintTextLight"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:text="@string/total_death_title"
            android:gravity="center"
            android:textColor="@color/colorDeathCases"
            android:textSize="@dimen/text_14"
            android:textAppearance="@style/TextAppearance.App.TextView.H5.White.Bold"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/recover_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:src="@drawable/ic_recover"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/cases_description"/>

    <LinearLayout
        android:id="@+id/layout_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/recover_img">

        <TextView
            android:id="@+id/recoverValue"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorHintTextLight"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:text="@string/total_recover_title"
            android:gravity="center"
            android:textColor="@color/colorRecoveredCases"
            android:textSize="@dimen/text_14"
            android:textAppearance="@style/TextAppearance.App.TextView.H5.White.Bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_last"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_x2"
            android:layout_marginTop="@dimen/space_x2"
            android:background="@drawable/bg_grey"
            android:padding="@dimen/space_x1_half">

            <RelativeLayout
                android:id="@+id/layout_chart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/txt_info"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/layout_statistic"
                app:layout_constraintTop_toTopOf="parent">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pie_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

                <LinearLayout
                    android:id="@+id/layout_cases"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/txt_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_20"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/case_reported"
                        android:textColor="@color/cool_grey"
                        android:textSize="@dimen/text_14"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_statistic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/space_x2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintLeft_toRightOf="@id/layout_chart"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_confirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_x3"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:paddingLeft="@dimen/space_x2">

                    <TextView
                        android:id="@+id/txt_confirmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_20"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmed"
                        android:textAppearance="@style/TextAppearance.App.TextView.H5.White.Bold"
                        android:textColor="@color/color_confirmed"
                        android:textSize="@dimen/text_14"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_confirmed" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_x2"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:paddingLeft="@dimen/space_x2">

                    <TextView
                        android:id="@+id/txt_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_20"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textAppearance="@style/TextAppearance.App.TextView.H5.White.Bold"
                        android:textColor="@color/color_recovered"
                        android:textSize="@dimen/text_14"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_recovered" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_death"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_x2"
                    android:layout_marginBottom="@dimen/space_x3"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:paddingLeft="@dimen/space_x2">

                    <TextView
                        android:id="@+id/txt_deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_20"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:textAppearance="@style/TextAppearance.App.TextView.H5.White.Bold"
                        android:textColor="@color/color_death"
                        android:textSize="@dimen/text_14"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_deaths" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/txt_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x2"
                android:text="@string/tap_on_statistic"
                android:textColor="@color/cool_grey"
                android:textSize="@dimen/text_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_statistic" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>